--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="topbar">
       <h1 allign="center" style="margin:0;">
-<img src="images\cover.JPG" style="WIDTH:100%"></h1></div>
+<img src="cover.JPG" style="WIDTH:100%"></h1></div>
 
 <div class="marque">
   <div class="marque1">
@@ -114,16 +114,16 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
         <div class="carousel-item active">
-      <img class="d-block w-100" src="images\1-1.jpg" alt="First slide">
+      <img class="d-block w-100" src="1-1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images\25.jpg" alt="Second slide">
+      <img class="d-block w-100" src="25.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images\1-2.jpg" alt="Second slide">
+      <img class="d-block w-100" src="1-2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images\1-3.jpg" alt="Third slide">
+      <img class="d-block w-100" src="1-3.jpg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -281,42 +281,42 @@
 
 
 
-  <img src="bottom images\9.jpeg"
+  <img src="bottom 9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\1.jpeg"
+  <img src="bottom 1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\2.jpeg"
+  <img src="bottom 2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\3.jpeg"
+  <img src="bottom 3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\4.jpeg"
+  <img src="bottom 4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\5.jpeg"
+  <img src="bottom 5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\6.jpeg"
+  <img src="bottom 6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\7.jpeg"
+  <img src="bottom 7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\8.jpeg"
+  <img src="bottom 8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\9.jpeg"
+  <img src="bottom 9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">`
 
-  <img src="bottom images\1.jpeg"
+  <img src="bottom 1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\2.jpeg"
+  <img src="bottom 2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\3.jpeg"
+  <img src="bottom 3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\4.jpeg"
+  <img src="bottom 4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\5.jpeg"
+  <img src="bottom 5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\6.jpeg"
+  <img src="bottom 6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\7.jpeg"
+  <img src="bottom 7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\8.jpeg"
+  <img src="bottom 8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
 
 </marquee>
