--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv" align="center" class="masterTooltip" title="Student Application" style="">
         <br>
-        <img src="icon/11.png" width="90" border="0">
+        <img src="11.png" width="90" border="0">
         <p style="padding-top:5px;"><strong>Student Application</strong></p>
       </div>
     </a>
@@ -198,7 +198,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv1" align="center" class="masterTooltip" title="Student Verification">
         <br>
-        <img src="icon/12.png" width="90" border="0">
+        <img src="12.png" width="90" border="0">
         <p style="padding-top:5px;"><strong>Student Verification</strong></p>
       </div>
     </a>
@@ -208,7 +208,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv" align="center" class="masterTooltip" title=" Franchisee Application  ">
         <br>
-        <img src="icon/20.png" width="90" border="0">
+        <img src="20.png" width="90" border="0">
         <p style="padding-top:5px;"><strong>Franchisee Application   </strong></p>
       </div>
     </a>
@@ -220,7 +220,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv1" align="center" class="masterTooltip" title="Franchisee Login">
         <br>
-        <img src="icon/19.png" width="90" border="0">
+        <img src="19.png" width="90" border="0">
         <p style="padding-top:5px;"><strong>Franchisee Login</strong></p>
       </div>
     </a>
@@ -231,7 +231,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv1" align="center" class="masterTooltip" title="Online Examination">
         <br>
-        <img src="icon/17.png" width="90" border="0">
+        <img src="17.png" width="90" border="0">
         <p style="padding-top:5px;"><strong>Online Examination </strong></p>
       </div>
     </a>
@@ -242,7 +242,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv" align="center" class="masterTooltip" title="Contact Us ">
         <br>
-        <img src="icon/15.png" width="90" border="0">
+        <img src="15.png" width="90" border="0">
         <p style="padding-top:5px;"><strong>Contact Us </strong></p>
       </div>
     </a>
@@ -252,7 +252,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv1" align="center" class="masterTooltip" title="ABOUT SIT">
         <br>
-        <img src="icon/9.png" width="150" border="0">
+        <img src="9.png" width="150" border="0">
         <p style="padding-top:5px;"><strong>About SIT</strong></p>
       </div>
     </a>
@@ -261,7 +261,7 @@
     <a href="" onclick="loading();">
       <div id="iconDiv" align="center" class="masterTooltip" title="Suggestion Box">
         <br>
-        <img src="icon/7.png" width="90" border="0">
+        <img src="7.png" width="90" border="0">
         <p style="padding-top:5px;"><strong>Feedback</strong></p>
       </div>
     </a>
