--- a/2years courses.html
+++ b/2years courses.html
@@ -18,7 +18,7 @@
 
     <div class="topbar">
       <h1 allign="center" style="margin:0;">
-<img src="images\cover.JPG" style="WIDTH:100%"></h1></div>
+<img src="cover.JPG" style="WIDTH:100%"></h1></div>
 
 <div class="marque">
   <div class="marque1">
