--- a/application.html
+++ b/application.html
@@ -19,7 +19,7 @@
 
     <div class="topbar">
       <h1 allign="center" style="margin:0;">
-<img src="images\cover.JPG" style="WIDTH:100%"></h1></div>
+<img src="cover.jpg" style="WIDTH:100%"></h1></div>
 
 <div class="marque">
   <div class="marque1">
