--- a/photo galary.html
+++ b/photo galary.html
@@ -18,7 +18,7 @@
 
     <div class="topbar">
       <h1 allign="center" style="margin:0;">
-<img src="images\cover.JPG" style="WIDTH:100%"></h1></div>
+<img src="cover.jpg" style="WIDTH:100%"></h1></div>
 
 <div class="marque">
   <div class="marque1">
@@ -134,42 +134,42 @@
 
 
 
-  <img src="bottom images\9.jpeg"
+  <img src="bottom 9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\1.jpeg"
+  <img src="bottom 1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\2.jpeg"
+  <img src="bottom 2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\3.jpeg"
+  <img src="bottom 3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\4.jpeg"
+  <img src="bottom 4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\5.jpeg"
+  <img src="bottom 5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\6.jpeg"
+  <img src="bottom 6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\7.jpeg"
+  <img src="bottom 7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\8.jpeg"
+  <img src="bottom 8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\9.jpeg"
+  <img src="bottom 9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">`
 
-  <img src="bottom images\1.jpeg"
+  <img src="bottom 1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\2.jpeg"
+  <img src="bottom 2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\3.jpeg"
+  <img src="bottom 3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\4.jpeg"
+  <img src="bottom 4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\5.jpeg"
+  <img src="bottom 5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\6.jpeg"
+  <img src="bottom 6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\7.jpeg"
+  <img src="bottom 7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\8.jpeg"
+  <img src="bottom 8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
 
 </marquee>
