--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
 
 
-  <img src="bottom 9.jpeg"
+  <img src=" 9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
   <img src="bottom 1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
