--- a/photo galary.html
+++ b/photo galary.html
@@ -134,42 +134,42 @@
 
 
 
-  <img src="bottom 9.jpeg"
+  <img src="9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 1.jpeg"
+  <img src="1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 2.jpeg"
+  <img src="2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 3.jpeg"
+  <img src="3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 4.jpeg"
+  <img src="4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 5.jpeg"
+  <img src="5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 6.jpeg"
+  <img src="6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 7.jpeg"
+  <img src="7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 8.jpeg"
+  <img src="8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 9.jpeg"
+  <img src="9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">`
 
-  <img src="bottom 1.jpeg"
+  <img src="1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 2.jpeg"
+  <img src="2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 3.jpeg"
+  <img src="3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 4.jpeg"
+  <img src="4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 5.jpeg"
+  <img src="5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 6.jpeg"
+  <img src="6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 7.jpeg"
+  <img src="7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 8.jpeg"
+  <img src="8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
 
 </marquee>
