--- a/video galary.html
+++ b/video galary.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta charset="utf-8">
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -131,38 +132,38 @@
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
   <img src="bottom 1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 2.jpeg"
+  <img src=" 2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 3.jpeg"
+  <img src=" 3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 4.jpeg"
+  <img src="4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 5.jpeg"
+  <img src=" 5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 6.jpeg"
+  <img src=" 6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 7.jpeg"
+  <img src=" 7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 8.jpeg"
+  <img src=" 8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 9.jpeg"
+  <img src=" 9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">`
 
-  <img src="bottom 1.jpeg"
+  <img src="b1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom  2.jpeg"
+  <img src="b 2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom  3.jpeg"
+  <img src="3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom  4.jpeg"
+  <img src="4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom  5.jpeg"
+  <img src="5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom  6.jpeg"
+  <img src="6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom 7.jpeg"
+  <img src=".jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom  8.jpeg"
+  <img src="8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
 
 </marquee>
