--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-info ">
  
+  
   <a class="navbar-brand btn btn-primary" href="#">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +183,7 @@
 
 
 <div class="des">  
-<div class="container" style="width: 97%;margin:auto;padding: 0; ">
+<div class="container" style="width: 97%;margin:auto;padding: 0; row justify-content-md-center ">
 
   <div class="col-lg-3 col-md-3 col-sm-12 boxshowc ">
     <a href="" onclick="loading();">
@@ -205,7 +206,7 @@
     </a>
   </div>
 
-  <div class="col-lg-3 col-md-3 col-sm-12 boxshowc">
+  <div class="col-lg-3 col-md-3 col-sm-12 boxshowc  ">
     <a href="" onclick="loading();">
       <div id="iconDiv" align="center" class="masterTooltip" title=" Franchisee Application  ">
         <br>
