--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
 
 <div class="service1-inner-area" id="serv">
+  <div class="row justify-content-md-center">
         <div class="container">
             <div class="row service1-wrapper">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 service-box1">
@@ -272,7 +273,7 @@
 </div>
     </div>
 
-    
+       </div>
 
 
 <div class="com">
