--- a/verification.html
+++ b/verification.html
@@ -19,7 +19,7 @@
 
     <div class="topbar">
       <h1 allign="center" style="margin:0;">
-<img src="images\cover.JPG" style="WIDTH:100%"></h1></div>
+<img src="cover.jpg" style="WIDTH:100%"></h1></div>
 
 <div class="marque">
   <div class="marque1">
@@ -152,6 +152,7 @@
 <br>
 <br>
 
+   
 <div class="com">
   <p>Affilated with Us</p>
 </div>
@@ -160,42 +161,42 @@
 
 
 
-  <img src="bottom images\9.jpeg"
+  <img src="9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\1.jpeg"
+  <img src="1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\2.jpeg"
+  <img src="2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\3.jpeg"
+  <img src="3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\4.jpeg"
+  <img src="4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\5.jpeg"
+  <img src="5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\6.jpeg"
+  <img src="6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\7.jpeg"
+  <img src="7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\8.jpeg"
+  <img src="8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\9.jpeg"
+  <img src="9.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">`
 
-  <img src="bottom images\1.jpeg"
+  <img src="1.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\2.jpeg"
+  <img src="2.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\3.jpeg"
+  <img src="3.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\4.jpeg"
+  <img src="4.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\5.jpeg"
+  <img src="5.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\6.jpeg"
+  <img src="6.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\7.jpeg"
+  <img src="7.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
-  <img src="bottom images\8.jpeg"
+  <img src="8.jpeg"
     style="width:100px;padding:3px;border:3px solid #FFFFFF;margin-top:25px;">
 
 </marquee>
