--- a/about us.html
+++ b/about us.html
@@ -4,7 +4,7 @@
   <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+               <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         
   <link rel="stylesheet" href="stylesheet.css">
@@ -18,7 +18,7 @@
 
     <div class="topbar">
       <h1 allign="center" style="margin:0;">
-<img src="images\cover.JPG" style="WIDTH:100%"></h1></div>
+<img src="cover.jpg" style="WIDTH:100%"></h1></div>
 
 <div class="marque">
   <div class="marque1">
@@ -111,7 +111,7 @@
 <br>
 <div class="row"> 
 <div class="text-left">
-  <img src="D:\SIT WEBSITE\images\my1.jpg" class="rounded-circle" alt="...">
+  <img src="my1.jpg" class="rounded-circle" alt="...">
 </div>
 
 <div class="details">  
@@ -144,7 +144,7 @@
 
 
 <div class="text-right">
-  <img src="D:\SIT WEBSITE\images\my1.jpg" class="rounded-circle" alt="...">
+  <img src="my1.jpg" class="rounded-circle" alt="...">
 </div>
 
    
@@ -162,11 +162,11 @@
         <div class="media-body">
           <div class="col">
 
-            <p style="text-align: center;"> vdsngdfhd</p>
+            <p style="text-align: center;"> </p>
 
                   </div>
 
-                  <p> tgjjknc</p>
+                  <p>  </p>
         </div>
       </div>
     </div>
