--- a/about us.html
+++ b/about us.html
@@ -117,6 +117,9 @@
 <div class="details">  
   <p class="text-center"> Krishanu pal </p>
 </div>
+  
+  
+  
 </div>
 
 <br>
@@ -133,7 +136,7 @@
         <div class="media-body">
          <div class="col">  
           
-          <p style="text-align: center;"> vdsngdfhd</p>
+          <p style="text-align: center;"> CEO: Surashi InfoTech</p>
 
         </div>
       </div>
