--- a/application.html
+++ b/application.html
@@ -47,7 +47,7 @@
   <div class="collapse navbar-collapse " id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ">
-        <a class="nav-link text-white" href="#">About Us</a>
+        <a class="nav-link text-white" href="about us.html">About Us</a>
       </li> 
 
         <li class="nav-item dropdown">
