--- a/about us.html
+++ b/about us.html
@@ -124,14 +124,14 @@
 
       <h2 class="my-5 h2">KRISHANU PAL</h2>
 
-      <img class="rounded-circle" alt="100x100" src="images/my1.jpg"
+      <img class="rounded-circle" alt="100x100" src="my1.jpg"
         data-holder-rendered="true">
 
     </div>
         <div class="col-md-6 mb-4">
       <h2 class="my-5 h2">RAVI KUMAR</h2>
       <img class="rounded-circle z-depth-2" alt="100x100"
-        src="images/RAVI.jpg" data-holder-rendered="true">
+        src="RAVI.jpg" data-holder-rendered="true">
 
     </div>
 
