Update 1 years courses.html

--- a/1 years courses.html
+++ b/1 years courses.html
@@ -9,7 +9,7 @@
         
   <link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="coursesstyle.css">
-  <title>2years Courses</title>
+  <title>1 year Courses</title>
   </head>
 
 
