--- a/photo galary.html
+++ b/photo galary.html
@@ -9,7 +9,7 @@
         
   <link rel="stylesheet" href="stylesheet.css">
 <link rel="stylesheet" href="coursesstyle.css">
-  <title>2years Courses</title>
+  <title>Photo Galary</title>
   </head>
 
 
