--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
 <div class="container" style="width: 97%;margin:auto;padding: 0; row justify-content-md-center ">
 
   <div class="col-lg-3 col-md-3 col-sm-12 boxshowc ">
-    <a href="" onclick="loading();">
+    <a href="" onclick="loading(application.html);">
       <div id="iconDiv" align="center" class="masterTooltip" title="Student Application" style="">
         <br>
         <img src="11.png" width="90" border="0">
-        <p style="padding-top:5px;"><strong>Student Application</strong></p>
+        <p style="padding-top:5px;"><strong>   Student Application   </strong></p>
       </div>
     </a>
   </div>
