--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
   </div>
 
   <div class="col-lg-3 col-md-3 col-sm-12 boxshowc">
-    <a href="" onclick="loading();">
+    <a href="about us.html" onclick="loading();">
       <div id="iconDiv1" align="center" class="masterTooltip" title="ABOUT SIT">
         <br>
-        <img src="9.png" width="150" border="0">
+        <img src="13.png" width="150" border="0">
         <p style="padding-top:5px;"><strong>About SIT</strong></p>
       </div>
     </a>
