--- a/application.html
+++ b/application.html
@@ -237,13 +237,14 @@
 
   
 <div class="row">
+  <div class="col-12">
   <input type="submit" value="Submit">
 </div>
 </form>
 </div>
 
 
-
+</div>
   </div>
     
 <br>
