--- a/about us.html
+++ b/about us.html
@@ -128,9 +128,9 @@
 
     </div>
         <div class="col-md-6 mb-4">
-      <h2 class="my-5 h2">RAVI KUMAR</h2>
+      <h2 class="my-5 h2">Sarmista Paul</h2>
       <img class="rounded-circle z-depth-2" alt="100x100"
-        src="RAVI.jpg" data-holder-rendered="true">
+        src="" data-holder-rendered="true">
 
     </div>
 
