--- a/application.html
+++ b/application.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="application.css">
 
   <title>Student Apllication </title>
+  <form name="frmContact" method="post" action="contact.php">
   </head>
 
 
@@ -130,7 +131,8 @@
 
   
   <div class="container">
-    <form action="connections.php" method="POST">
+    <form name="frmContact" method="post" action="contact.php">
+    
    
 
 <div class="row">
@@ -139,7 +141,7 @@
   </div>
 
   <div class="col-4">
-    <select id="course" name="course">
+    <select id="course_dr" name="course">
       <option value="2 years">2 years</option>
       <option value="1 year">1 year</option>
       <option value="6 months">6 months</option>
@@ -182,7 +184,7 @@
   </div>
 
   <div class="col-4">
-    <input type="text" id="" name="fathersname" placeholder="Father's Name">
+    <input type="text" id="fathersname" name="fathersname" placeholder="Father's Name">
  </div>
 
 <div class="col-2">
@@ -190,7 +192,7 @@
 </div>
 
     <div class="col-4">
-  <input type="text" id="" name="mothersname" placeholder="Mother's Name">
+  <input type="text" id="mothersname" name="mothersname" placeholder="Mother's Name">
     </div>
 </div>
 
@@ -200,7 +202,7 @@
 </div>
 
 <div class="col-4">
-  <input type="date" id="" name="dateofbirth">
+  <input type="date" id="dob" name="dateofbirth">
 </div>
 
 </div>
@@ -215,7 +217,11 @@
     <select id="Gend" name="gender">
       <option value="Male">Male</option>
       <option value="female">Female</option>
-      <option value="Transgender">Transgender</option>
+      <option value="Trans women">Transgender women</option>
+      <option value="Trans man">Transgender male</option>
+      <option value="non-binary">Non-binary</option>
+      <option value="non-conforming">Non-conforming</option>
+      <option value="no-answer">I prefer not to say</option>
     </select>
 
 
@@ -403,6 +409,5 @@
   <div id="fb-root"></div>
  
 </html>
-
 
 
